# SLM-Cheat

./: .gitignore  README.md  pyproject.toml
data/querys/: acm.txt  ieee.txt  scopus.txt  wos.txt
data/raw/: export.xlsx
notebooks/: 00_ingestion_validation.ipynb  01_bibliometric.ipynb  02_screening_coding.ipynb  03_keyword_network.ipynb  04_crosscoding_temporal.ipynb  05_topic_modeling.ipynb
scripts/: utils.py
