[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cheat-slm"
version = "0.1.0"
description = "Notebook-first bibliometric study workspace for SLM analysis from coded XLSX files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "numpy>=1.26",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "scikit-learn>=1.5",
  "pyarrow>=16.1",
  "plotly>=5.24",
  "networkx>=3.3",
  "holoviews>=1.19",
  "bokeh>=3.5",
  "pyvis>=0.3.2",
  "datashader>=0.16",
  "umap-learn>=0.5",
  "sentence-transformers>=3.0",
  "wordcloud>=1.9",
  "kaleido>=1.3.0",
  "bertopic>=0.16",
  "hdbscan>=0.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.3",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
